--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-dash==2.14.1
-pandas==2.2.2
-plotly==5.18.0
-requests==2.31.0
-gunicorn==21.2.0
-flask==3.0.2
-numpy==2.0.0
-setuptools==70.0.0
+streamlit==1.28.0
+pandas==1.5.3
+plotly==5.15.0
+requests==2.28.2
+numpy==1.24.3
